[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "caentools"
dependencies = [
    "scipp",
    "numpy",
    "typer"
]
dynamic = ["version"]
description = ""

[project.scripts]
caen-extract = 'caentools.main:cli_extract'

[tool.setuptools.packages.find]
where = ["."]
include = ["caentools*"]

[tool.hatch.version]
source = "vcs"

[tool.hatch]
